# django-rest-framework

./: README.md  api.http  models.dot  pyproject.toml  schema.yml
api/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
api/management/commands/: populate_db.py
api/migrations/: 0001_initial.py
notes/: curl-cheatsheet.md  lesson-01.md  lesson-02.md  lesson-03.md  lesson-04.md  lesson-05.md  lesson-06.md  lesson-07.md  lesson-08.md  lesson-09.md  lesson-10.md  lesson-11.md  lesson-12.md  lesson-13.md  lesson-14.md  lesson-15.md  lesson-16.md  lesson-17.md  lesson-18.md  lesson-19.md  lesson-20.md  lesson-21.md  lesson-22.md  lesson-23.md  lesson-24.md  lesson-25.md  lesson-26.md  lesson-27.md  lesson-28.md  lesson-29.md  lesson-30.md
project/: settings.py  urls.py
